--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,14 @@
-.input {
-  flex-grow: 1;
+.button {
+  border-radius: 5px;
+  border: none;
+  width: 50px;
+  height: 50px;
+  background: rgb(164, 164, 250);
+}
+
+.icon {
+  width: 35px;
+  height: 35px;
+  //   background: none;
+  //   border: none;
 }
