--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,11 +4,10 @@
   width: 50px;
   height: 50px;
   background: rgb(164, 164, 250);
+  cursor: pointer;
 }
 
 .icon {
   width: 35px;
   height: 35px;
-  //   background: none;
-  //   border: none;
 }
